--- a/pods_ngnix.yaml
+++ b/pods_ngnix.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: nginx
-  replicas: 3 # tells deployment to run 3 pods matching the template
+  replicas: 3 # tells deployment to run  pods matching the template
   template:
     metadata:
       labels:
