--- a/pods_ngnix.yaml
+++ b/pods_ngnix.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
+  # namespace: ngnix-demo
   name: nginx-deployment
 spec:
   selector:
