--- a/service_ngnix.yaml
+++ b/service_ngnix.yaml
@@ -1,6 +1,7 @@
-apiVersion: v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: v1
 kind: Service
 metadata:
+  # namespace: ngnix-demo
   name: nginx-service
 spec:
   selector:
@@ -9,4 +10,5 @@ spec:
   ports:
   - name: http
     port: 80
+    protocol: TCP
     targetPort: 80
