--- a/service_ngnix.yaml
+++ b/service_ngnix.yaml
@@ -5,10 +5,10 @@ metadata:
   name: nginx-service
 spec:
   selector:
-    app: ngnix
+    app: nginx
   type: LoadBalancer
   ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
+    - protocol: TCP
+      port: 8888
+      targetPort: 80
+  externalTrafficPolicy: Cluster
